Empezando a crear la estructura de la modal

--- a/IncidenceAppMS/src/main/webapp/app/layouts/main/main.component.html
+++ b/IncidenceAppMS/src/main/webapp/app/layouts/main/main.component.html
@@ -6,8 +6,10 @@
 
 <div class="container-fluid">
   <div class="card jh-card">
+    <!-- Main -->
     <router-outlet></router-outlet>
+    <!-- Modal -->
+    <router-outlet name="modal"></router-outlet>
   </div>
-
   <jhi-footer></jhi-footer>
 </div>
