Se crea la estructura para las modales de angular

--- a/IncidenceAppMS/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/IncidenceAppMS/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -43,7 +43,7 @@
         <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="entity-menu">
           <!-- Map -->
           <li>
-            <a class="dropdown-item" routerLink="incidences/map" routerLinkActive="active" (click)="collapseNavbar()">
+            <a class="dropdown-item" routerLink="index/map" routerLinkActive="active" (click)="collapseNavbar()">
               <fa-icon icon="users" [fixedWidth]="true"></fa-icon>
               <span jhiTranslate="global.menu.incidences.city-map">City Map</span>
             </a>
@@ -51,7 +51,7 @@
 
           <!-- List -->
           <li>
-          <a class="dropdown-item" routerLink="incidences/list" routerLinkActive="active" (click)="collapseNavbar()">
+          <a class="dropdown-item" routerLink="index/list" routerLinkActive="active" (click)="collapseNavbar()">
             <fa-icon icon="users" [fixedWidth]="true"></fa-icon>
             <span jhiTranslate="global.menu.incidences.list">Listado</span>
           </a>
