--- a/IncidenceAppMS/src/main/webapp/app/pages/index/city-map/city-map.component.html
+++ b/IncidenceAppMS/src/main/webapp/app/pages/index/city-map/city-map.component.html
@@ -1,1 +1,15 @@
 <p>city-map works!</p>
+
+<button pButton pRipple type="button" 
+    class="p-button-rounded" 
+    icon="pi pi-eye"
+    style="background-color: #116AA2 !important;"
+    (click)="getFormIncidenceModal()">
+</button>
+
+<button pButton pRipple type="button" 
+    class="p-button-rounded" 
+    icon="pi pi-eye"
+    style="background-color: #30e00c !important;"
+    (click)="getViewIncidenceModal()">
+</button>
