--- a/IncidenceAppMS/src/main/webapp/app/shared/modal/modal.component.html
+++ b/IncidenceAppMS/src/main/webapp/app/shared/modal/modal.component.html
@@ -1,1 +1,6 @@
-<p>modal works!</p>
+<p-dialog #modalComponent *ngIf="modalParams" [(visible)]="visible" [modal]="true" (onHide)="onHide()" [style]="" [baseZIndex]="10000" [resizable]="true" [maximizable]="true">
+    <ng-template pTemplate="header">
+        <span class="p-dialog-title">{{modalParams.title}}</span>
+    </ng-template>
+    <router-outlet (activate)='onActivate( $event, modalComponent )' (deactivate)='onDeactivate( $event, modalComponent )'></router-outlet>
+</p-dialog>
