--- a/IncidenceAppMS/src/main/webapp/app/pages/index/city-map/city-map.component.html
+++ b/IncidenceAppMS/src/main/webapp/app/pages/index/city-map/city-map.component.html
@@ -1,4 +1,12 @@
-<p>city-map works!</p>
+
+<h1>Su ciudad</h1>
+
+<p>Este es el mapa interactivo donde podra crear incidencias que seran comunicadas a su ayuntamiento.</p>
+
+<div>Mapa</div>
+
+<!-- <p-gmap [options]="options" [style]="{'width':'100%','height':'320px'}" ></p-gmap> -->
+
 
 <button pButton pRipple type="button" 
     class="p-button-rounded" 
